# GroundingGPT

./: pyproject.toml  requirements.txt
lego/: LEGO.py
video_llama/configs/: default.yaml
